--- a/votingPull/css/auth.css
+++ b/votingPull/css/auth.css
@@ -5,3 +5,26 @@
     width: 100%;
     height: 100vh;
 }
+
+#day {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.letter {
+    display: inline-block;
+    opacity: 0;
+    animation: fadeIn 0.5s forwards;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
